--- a/images/index.html
+++ b/images/index.html
@@ -6,16 +6,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Copa America 2021</title>
+    <!-- Font Awsome -->
+    <script src="https://kit.fontawesome.com/74588d2b4a.js" crossorigin="anonymous"></script>
+    <!-- CSS Style Link -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 
 <body>
+    <!-- Header Section -->
+    <header>
+        <section class="top-section">
+            <div class="header">
+                <div class="header-info">
+                    <h1>Conmebol Copa America 2021</h1>
+                    <a href="https://www.conmebol.com/" Target="_blank">Watch Live <i
+                            class="fas fa-arrow-circle-right"></i></a>
+                </div>
+                <div class="header-image">
+                    <img src="banner.png" alt="">
+                </div>
+            </div>
+        </section>
+
+    </header>
 
     <main>
         <!------------------------// 
         Players with Details 
     //------------------------->
-        <section>
+        <section class="container">
             <div class="players">
                 <div class="player-details">
                     <img src="players/player-1.png" alt="Picture of Neymar">
@@ -48,41 +68,68 @@
                 </div>
                 <div class="player-details">
                     <img src="players/player-5.png" alt="Picture of Ozil">
-                    <p></p>
+                    <p>Mesut Ozil on his first Fenerbahce league start.Having found himself frozen out in north London,
+                        Ozil made the decision to leave the Emirates Stadium ahead of his contract expiring and join
+                        Fenerbahce on a permanent deal, despite having also held talks with American outfit DC United.
+                    </p>
                 </div>
                 <div class="player-details">
                     <img src="players/player-6.png" alt="Picture of Icardi">
-                    <p></p>
+                    <p>Mauro Emanuel Icardi (Spanish pronunciation: [ˈmawɾo emaˈnwel iˈkaɾði]; born 19 February 1993) is
+                        an Argentine professional footballer who plays as a striker for Ligue 1 club Paris Saint-Germain
+                        and the Argentina national team.
+                    </p>
                 </div>
                 <div class="player-details">
                     <img src="players/player-7.png" alt="Picture of Di Maria">
-                    <p></p>
+                    <p>Ángel Di Maria holds both Italian and Argentine passports, as his ancestors were from Italy. In
+                        2011, he got married to Jorgelina, a fellow Argentine. They have a daughter named Pia. Ángel is
+                        considered to be a family man.</p>
                 </div>
                 <div class="player-details">
                     <img src="players/player-8.png" alt="Picture of Mbappe">
-                    <p></p>
+                    <p>Mbappé was born in Paris and was raised in Bondy, Seine-Saint-Denis, a commune 10.9 km (6.8 mi)
+                        from the centre of Paris. His father, Wilfried, is from Cameroon, and, as well as being Mbappé's
+                        agent, is a football coach, while his mother, Fayza Lamari, is of Algerian (Kabyle) origin and
+                        is a former handball player.</p>
                 </div>
                 <div class="player-details">
                     <img src="players/player-9.png" alt="Picture of Salah">
-                    <p></p>
+                    <p>Mohamed Salah Hamed Mahrous Ghaly (born 15 June 1992) is an Egyptian professional footballer. He
+                        plays for Premier League club Liverpool and the Egypt national team. He plays as a forward. ...
+                        He married Magi Salah in 2013 and In 2014, his daughter Makkah Salah was born.</p>
                 </div>
                 <div class="player-details">
                     <img src="players/player-10.png" alt="Picture of Kane">
-                    <p></p>
+                    <p>Harry Edward Kane MBE (born 28 July 1993) is an English professional footballer who plays as a
+                        striker for Premier League club Tottenham Hotspur and captains the England national team. ... In
+                        February 2021, he became Tottenham's second-highest all-time goalscorer in official
+                        competitions.</p>
                 </div>
                 <div class="player-details">
                     <img src="players/player-11.png" alt="Picture of De Bruyne">
-                    <p></p>
+                    <p>Kevin De Bruyne (born 28 June 1991) is a Belgian professional footballer who plays as a
+                        midfielder for Premier League club Manchester City, where he is vice-captain, and the Belgium
+                        national team.</p>
                 </div>
                 <div class="player-details">
                     <img src="players/player-12.png" alt="Picture of Coutinho">
-                    <p></p>
+                    <p>Philippe Coutinho Correia (born 12 June 1992) is a Brazilian professional footballer who plays as
+                        an attacking midfielder or winger for Spanish club Barcelona and the Brazil national team. He is
+                        known for his combination of vision, passing, dribbling and ability to conjure curving
+                        long-range strikes</p>
                 </div>
             </div>
         </section>
 
     </main>
+    <footer>
+        <img src="Logo.png" alt="Football Logo">
+        <div class="socia-icon">
 
+        </div>
+
+    </footer>
 </body>
 
 </html>
