--- a/images/index.html
+++ b/images/index.html
@@ -24,7 +24,7 @@
                             class="fas fa-arrow-circle-right"></i></a>
                 </div>
                 <div class="header-image">
-                    <img src="banner.png" alt="">
+                    <img src="others/banner.png" alt="">
                 </div>
             </div>
         </section>
@@ -124,10 +124,13 @@
 
     </main>
     <footer>
-        <img src="Logo.png" alt="Football Logo">
-        <div class="socia-icon">
+        <img src="others/Logo.png" alt="Football Logo">
+        <div class="social-icon">
+            <img src="Social Icons/Instagram.png" alt=""><img src="Social Icons/Twitter.png" alt=""><img
+                src="Social Icons/Dribbble.png" alt=""><img src="Social Icons/Youtube.png" alt="">
 
         </div>
+        <p>Copyright © 2022 Football</p>
 
     </footer>
 </body>
