--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                             class="fas fa-arrow-circle-right"></i></a>
                 </div>
                 <div class="header-image">
-                    <img src="others/banner.png" alt="">
+                    <img src="images/others/banner.png" alt="">
                 </div>
             </div>
         </section>
@@ -38,7 +38,7 @@
         <section class="container">
             <div class="players">
                 <div class="player-details">
-                    <img src="players/player-1.png" alt="Picture of Neymar">
+                    <img src="images/players/player-1.png" alt="Picture of Neymar">
                     <p>Neymar da Silva Santos Júnior was born in Mogi das Cruzes, São Paulo, to Neymar Santos Sr. and
                         Nadine da Silva. He inherited his name from his father, who is a former footballer and became
                         his son's advisor as Neymar's talents began to grow.[15] Neymar comments on his father's role:
@@ -46,74 +46,74 @@
                         family."</p>
                 </div>
                 <div class="player-details">
-                    <img src="players/player-2.png" alt="Picture of Messi">
+                    <img src="images/players/player-2.png" alt="Picture of Messi">
                     <p>Leonel Messi is an Argentine professional footballer who plays as a forward or an attacking
                         midfielder and captains the Argentina national team. He is currently a free agent, having played
                         all his professional career for La Liga club FC Barcelona, whom he captained from 2018 to 2021.
                     </p>
                 </div>
                 <div class="player-details">
-                    <img src="players/player-3.png" alt="Picture of Ronaldo">
+                    <img src="images/players/player-3.png" alt="Picture of Ronaldo">
                     <p>Christiano Ronaldo is a Portuguese professional footballer who plays as a forward for Serie A
                         club Juventus and captains the Portugal national team. Often considered the best player in the
                         world and widely regarded as one of the greatest players of all time, Ronaldo has won five
                         Ballons d'Or[note 3] and four European Golden Shoes</p>
                 </div>
                 <div class="player-details">
-                    <img src="players/player-4.png" alt="Picture of Dibala">
+                    <img src="images/players/player-4.png" alt="Picture of Dibala">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque ea animi eum? Dolores velit sequi
                         maiores fugit rerum, ipsam obcaecati blanditiis similique odit? Nisi harum, illo cupiditate fuga
                         in nam et neque sed esse incidunt blanditiis est repudiandae necessitatibus quibusdam, sit nobis
                         inventore distinctio deleniti exercitationem possimus explicabo at. Repellendus?</p>
                 </div>
                 <div class="player-details">
-                    <img src="players/player-5.png" alt="Picture of Ozil">
+                    <img src="images/players/player-5.png" alt="Picture of Ozil">
                     <p>Mesut Ozil on his first Fenerbahce league start.Having found himself frozen out in north London,
                         Ozil made the decision to leave the Emirates Stadium ahead of his contract expiring and join
                         Fenerbahce on a permanent deal, despite having also held talks with American outfit DC United.
                     </p>
                 </div>
                 <div class="player-details">
-                    <img src="players/player-6.png" alt="Picture of Icardi">
+                    <img src="images/players/player-6.png" alt="Picture of Icardi">
                     <p>Mauro Emanuel Icardi (Spanish pronunciation: [ˈmawɾo emaˈnwel iˈkaɾði]; born 19 February 1993) is
                         an Argentine professional footballer who plays as a striker for Ligue 1 club Paris Saint-Germain
                         and the Argentina national team.
                     </p>
                 </div>
                 <div class="player-details">
-                    <img src="players/player-7.png" alt="Picture of Di Maria">
+                    <img src="images/players/player-7.png" alt="Picture of Di Maria">
                     <p>Ángel Di Maria holds both Italian and Argentine passports, as his ancestors were from Italy. In
                         2011, he got married to Jorgelina, a fellow Argentine. They have a daughter named Pia. Ángel is
                         considered to be a family man.</p>
                 </div>
                 <div class="player-details">
-                    <img src="players/player-8.png" alt="Picture of Mbappe">
+                    <img src="images/players/player-8.png" alt="Picture of Mbappe">
                     <p>Mbappé was born in Paris and was raised in Bondy, Seine-Saint-Denis, a commune 10.9 km (6.8 mi)
                         from the centre of Paris. His father, Wilfried, is from Cameroon, and, as well as being Mbappé's
                         agent, is a football coach, while his mother, Fayza Lamari, is of Algerian (Kabyle) origin and
                         is a former handball player.</p>
                 </div>
                 <div class="player-details">
-                    <img src="players/player-9.png" alt="Picture of Salah">
+                    <img src="images/players/player-9.png" alt="Picture of Salah">
                     <p>Mohamed Salah Hamed Mahrous Ghaly (born 15 June 1992) is an Egyptian professional footballer. He
                         plays for Premier League club Liverpool and the Egypt national team. He plays as a forward. ...
                         He married Magi Salah in 2013 and In 2014, his daughter Makkah Salah was born.</p>
                 </div>
                 <div class="player-details">
-                    <img src="players/player-10.png" alt="Picture of Kane">
+                    <img src="images/players/player-10.png" alt="Picture of Kane">
                     <p>Harry Edward Kane MBE (born 28 July 1993) is an English professional footballer who plays as a
                         striker for Premier League club Tottenham Hotspur and captains the England national team. ... In
                         February 2021, he became Tottenham's second-highest all-time goalscorer in official
                         competitions.</p>
                 </div>
                 <div class="player-details">
-                    <img src="players/player-11.png" alt="Picture of De Bruyne">
+                    <img src="images/players/player-11.png" alt="Picture of De Bruyne">
                     <p>Kevin De Bruyne (born 28 June 1991) is a Belgian professional footballer who plays as a
                         midfielder for Premier League club Manchester City, where he is vice-captain, and the Belgium
                         national team.</p>
                 </div>
                 <div class="player-details">
-                    <img src="players/player-12.png" alt="Picture of Coutinho">
+                    <img src="images/players/player-12.png" alt="Picture of Coutinho">
                     <p>Philippe Coutinho Correia (born 12 June 1992) is a Brazilian professional footballer who plays as
                         an attacking midfielder or winger for Spanish club Barcelona and the Brazil national team. He is
                         known for his combination of vision, passing, dribbling and ability to conjure curving
@@ -124,10 +124,10 @@
 
     </main>
     <footer>
-        <img src="others/Logo.png" alt="Football Logo">
+        <img src="images/others/Logo.png" alt="Football Logo">
         <div class="social-icon">
-            <img src="Social Icons/Instagram.png" alt=""><img src="Social Icons/Twitter.png" alt=""><img
-                src="Social Icons/Dribbble.png" alt=""><img src="Social Icons/Youtube.png" alt="">
+            <img src="images/social/Instagram.png" alt=""><img src="images/social/Twitter.png" alt=""><img
+                src="images/social/Dribbble.png" alt=""><img src="images/social/Youtube.png" alt="">
 
         </div>
         <p>Copyright © 2022 Football</p>
