--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
     <!-- Header Section -->
     <header>
         <section class="top-section">
+            <nav class="navigation-bar">
+                <div class="navigation-menu">
+                    <a href="#">Home</a><a href="#">Clubs</a><a href="#">WorldCup 2023</a><a href="#">Upcoming
+                        Matches</a><a href="#">Contact</a>
+                </div>
+                <div class="login">
+                    <img src="images/social/login.png" alt="">
+                    <a href="https://www.programming-hero.com/">Log In</a>
+                </div>
+            </nav>
             <div class="header">
                 <div class="header-info">
                     <h1>Conmebol Copa America 2021</h1>
