--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
 
 <body>
-    <!-- Header Section -->
+    <!----------------\\
+        Header Section
+    \\------------------->
     <header>
         <section class="top-section">
             <nav class="navigation-bar">
@@ -24,7 +26,7 @@
                 </div>
                 <div class="login">
                     <img src="images/social/login.png" alt="">
-                    <a href="https://www.programming-hero.com/">Log In</a>
+                    <a href="https://www.programming-hero.com/" target="_blank">Log In</a>
                 </div>
             </nav>
             <div class="header">
@@ -133,6 +135,9 @@
         </section>
 
     </main>
+    <!-------------------------\\
+         Footer Section 
+    \\---------------------------->
     <footer>
         <img src="images/others/Logo.png" alt="Football Logo">
         <div class="social-icon">
@@ -143,6 +148,9 @@
         <p>Copyright © 2022 Football</p>
 
     </footer>
+    <!--------------\\
+        The End 
+    \\---------------->
 </body>
 
 </html>
